--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -3,6 +3,11 @@
 	xmlns="http://java.sun.com/xml/ns/javaee"
 	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
 	id="WebApp_ID" version="3.0">
+	 <listener>
+	<listener-class>
+             com.siemens.listener.PickUpContextListener
+        </listener-class>
+   </listener>
 	<display-name>Transport System</display-name>
 	<welcome-file-list>
 		<welcome-file>index.html</welcome-file>
